Closed Bug 251300 Opened 21 years ago Closed 21 years ago

stdint.h missing in FreeBSD

Categories

(Core Graveyard :: Plug-ins, defect)

x86
FreeBSD
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: jon, Assigned: jst)

Details

Attachments

(2 files)

User-Agent: Mozilla/5.0 (X11; U; FreeBSD i386; en-US; rv:1.8a2) Gecko/20040714 Build Identifier: Mozilla/5.0 (X11; U; FreeBSD i386; en-US; rv:1.8a2) Gecko/20040714 FreeBSD doesn't appear to include stdint.h. It does define two of the desired types as does BSD/OS, and defines the other two elsewhere. See bug 250666. Patch coming up. Tested on 4.10-RELEASE. 5.x looks the same with respect to these includes. (The __cplusplus check is made in stdbool.h.) Reproducible: Always Steps to Reproduce:
Attachment #153112 - Flags: superreview?(jst)
Attachment #153112 - Flags: review?(jst)
Comment on attachment 153112 [details] [diff] [review] same patch, whitespace ignored r+sr=jst, thanks for the patch!
Attachment #153112 - Flags: superreview?(jst)
Attachment #153112 - Flags: superreview+
Attachment #153112 - Flags: review?(jst)
Attachment #153112 - Flags: review+
It'll need a checkin (and I see the tree's frozen...)
Attachment #153112 - Flags: approval1.8a2?
Assignee: nobody → jst
Attachment #153112 - Flags: approval1.8a2?
Checked in by timeless. Marking FIXED.
Status: UNCONFIRMED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Yup (3.15 -> 3.16. thanks:) v.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: