Bug 251300 stdint.h missing in FreeBSD patch by jon@rekai.net r=jst sr=jst